tests/snapshots/yaml_suite_snapshots__yaml_suite_J7VC_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: "one: 2\nthree: 4\n"
  from: NimYAML tests
  json: "{\n  \"one\": 2,\n  \"three\": 4\n}\n"
  name: Empty Lines Between Mapping Elements
  tags: whitespace mapping
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :one\n   =VAL :2\n   =VAL :three\n   =VAL :4\n  -MAP\n -DOC\n-STR\n"
  yaml: "one: 2\n\n\nthree: 4\n"
