tests/snapshots/yaml_suite_snapshots__yaml_suite_J9HZ_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Spec Example 2.9. Single Document with Two Comments
  from: "http://www.yaml.org/spec/1.2/spec.html#id2760633"
  tags: mapping sequence spec comment
  yaml: "---\nhr: # 1998 hr ranking\n  - Mark McGwire\n  - Sammy Sosa\nrbi:\n  # 1998 rbi ranking\n  - Sammy S…"
  tree: "+STR\n +DOC ---\n  +MAP\n   =VAL :hr\n   +SEQ\n    =VAL :Mark McGwire\n    =VAL :Sammy Sosa\n   -SEQ\n…"
  json: "{\n  \"hr\": [\n    \"Mark McGwire\",\n    \"Sammy Sosa\"\n  ],\n  \"rbi\": [\n    \"Sammy Sosa\",\n    \"Ken Gr…"
  dump: "---\nhr:\n- Mark McGwire\n- Sammy Sosa\nrbi:\n- Sammy Sosa\n- Ken Griffey\n"
