tests/snapshots/yaml_suite_snapshots__yaml_suite_JEF9_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Trailing whitespace in streams
  from: "@ingydotnet"
  tags: literal
  yaml: "- |+\n↵\n↵\n"
  tree: "+STR\n +DOC\n  +SEQ\n   =VAL |\\n\\n\n  -SEQ\n -DOC\n-STR\n"
  json: "[\n  \"\\n\\n\"\n]\n"
  dump: "- |+\n↵\n↵\n...\n"
- yaml: "- |+\n␣␣␣\n"
  tree: "+STR\n +DOC\n  +SEQ\n   =VAL |\\n\n  -SEQ\n -DOC\n-STR\n"
  json: "[\n  \"\\n\"\n]\n"
  dump: "- |+\n\n...\n"
- yaml: "- |+\n␣␣␣∎\n"
  dump: "- |+\n\n...\n"
