tests/snapshots/yaml_suite_snapshots__yaml_suite_JEF9_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: "- |+\n↵\n↵\n...\n"
  from: "@ingydotnet"
  json: "[\n  \"\\n\\n\"\n]\n"
  name: Trailing whitespace in streams
  tags: literal
  tree: "+STR\n +DOC\n  +SEQ\n   =VAL |\\n\\n\n  -SEQ\n -DOC\n-STR\n"
  yaml: "- |+\n↵\n↵\n"
- dump: "- |+\n\n...\n"
  json: "[\n  \"\\n\"\n]\n"
  tree: "+STR\n +DOC\n  +SEQ\n   =VAL |\\n\n  -SEQ\n -DOC\n-STR\n"
  yaml: "- |+\n␣␣␣\n"
- dump: "- |+\n\n...\n"
  yaml: "- |+\n␣␣␣∎\n"
