tests/snapshots/yaml_suite_snapshots__yaml_suite_JHB9_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Spec Example 2.7. Two Documents in a Stream
  from: "http://www.yaml.org/spec/1.2/spec.html#id2760493"
  tags: spec header
  yaml: "# Ranking of 1998 home runs\n---\n- Mark McGwire\n- Sammy Sosa\n- Ken Griffey\n\n# Team ranking\n---\n- C…"
  tree: "+STR\n +DOC ---\n  +SEQ\n   =VAL :Mark McGwire\n   =VAL :Sammy Sosa\n   =VAL :Ken Griffey\n  -SEQ\n -DOC…"
  json: "[\n  \"Mark McGwire\",\n  \"Sammy Sosa\",\n  \"Ken Griffey\"\n]\n[\n  \"Chicago Cubs\",\n  \"St Louis Cardinals\"…"
  dump: "---\n- Mark McGwire\n- Sammy Sosa\n- Ken Griffey\n---\n- Chicago Cubs\n- St Louis Cardinals\n"
