tests/snapshots/yaml_suite_snapshots__yaml_suite_JHB9_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: "---\n- Mark McGwire\n- Sammy Sosa\n- Ken Griffey\n---\n- Chicago Cubs\n- St Louis Cardinals\n"
  from: "http://www.yaml.org/spec/1.2/spec.html#id2760493"
  json: "[\n  \"Mark McGwire\",\n  \"Sammy Sosa\",\n  \"Ken Griffey\"\n]\n[\n  \"Chicago Cubs\",\n  \"St Louis Cardinals\"\n]\n"
  name: Spec Example 2.7. Two Documents in a Stream
  tags: spec header
  tree: "+STR\n +DOC ---\n  +SEQ\n   =VAL :Mark McGwire\n   =VAL :Sammy Sosa\n   =VAL :Ken Griffey\n  -SEQ\n -DOC\n +DOC ---\n  +SEQ\n   =VAL :Chicago Cubs\n   =VAL :St Louis Cardinals\n  -SEQ\n -DOC\n-STR\n"
  yaml: "# Ranking of 1998 home runs\n---\n- Mark McGwire\n- Sammy Sosa\n- Ken Griffey\n\n# Team ranking\n---\n- Chicago Cubs\n- St Louis Cardinals\n"
